log
Wed, May 14, 2025  8:19:10 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  8:30:15 AM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
6afbbd6
Wed, May 14, 2025  8:31:24 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4db74db
Wed, May 14, 2025  8:34:00 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
493ad81
Wed, May 14, 2025  8:35:45 AM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4711cbb
Wed, May 14, 2025  8:36:32 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
21f7ca4
Wed, May 14, 2025  8:38:30 AM: 
 tests:  0|5
total_score: 0/70
6998cd4
Wed, May 14, 2025  8:39:19 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7ab48bb
Wed, May 14, 2025  8:50:42 AM: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2fa992e
Wed, May 14, 2025  8:56:33 AM: 
 sudoku.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
6553165
Wed, May 14, 2025  8:59:59 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b217bdb
Wed, May 14, 2025  9:04:20 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
test.c: In function 'is_valid':
sudoku.c:60:19: error: 'k' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         int i=3*(k/3) + (p/3) ;
                 ~~^~~
cc1.exe: all warnings being treated as errors
fa3111a
Wed, May 14, 2025  9:05:50 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
3402db3
Wed, May 14, 2025  9:09:38 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
496c99e
Wed, May 14, 2025  9:20:30 AM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
5b84ccb
Wed, May 14, 2025  9:30:44 AM: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|3
total_score: 35/70
26c1c99
Wed, May 14, 2025  9:32:03 AM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
761d551
ju., 15 de may. de 2025 16:22:33: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
294edb1
ju., 15 de may. de 2025 16:23:48: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c865dba
ju., 15 de may. de 2025 16:24:29: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f0f6043
ju., 15 de may. de 2025 16:33:23: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
822af34
ju., 15 de may. de 2025 16:33:42: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
37ada0a
ju., 15 de may. de 2025 16:37:47: 
 tests:  5|3
total_score: 35/70
7e2dc71
ju., 15 de may. de 2025 17:39:59: 
 sudoku.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  6|3
total_score: 40/70
1e3585e
ju., 15 de may. de 2025 17:41:13: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 40/70
95d1606
ju., 15 de may. de 2025 17:44:00: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|3
total_score: 40/70
6418755
ju., 15 de may. de 2025 17:49:57: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  6|3
total_score: 40/70
b0f8794
ju., 15 de may. de 2025 17:51:51: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|3
total_score: 40/70
3307d25
ju., 15 de may. de 2025 17:54:40: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
2574bf2
ju., 15 de may. de 2025 17:55:43: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
f84f4fe
ju., 15 de may. de 2025 17:58:35: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
5e3d491
ju., 15 de may. de 2025 17:59:31: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
6b9cfa2
ju., 15 de may. de 2025 18:00:19: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
c5e930b
ju., 15 de may. de 2025 18:01:07: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
40953dc
ju., 15 de may. de 2025 18:14:58: 
 sudoku.c | 31 ++++++++++++++++++++++++++++---
 1 file changed, 28 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
1175256
ju., 15 de may. de 2025 18:24:04: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a168cf4
ju., 15 de may. de 2025 18:24:47: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4ff5252
ju., 15 de may. de 2025 18:25:49: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
b17204c
ju., 15 de may. de 2025 18:26:41: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
11f4165
ju., 15 de may. de 2025 18:30:47: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
7a03ce2
vi., 16 de may. de 2025 19:19:42: 
 sudoku.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  7|1
total_score: 55/70
061887c
vi., 16 de may. de 2025 20:00:36: 
 sudoku.c | 37 +++++++++++++++++++++++++++----------
 1 file changed, 27 insertions(+), 10 deletions(-)
 tests:  8|1
total_score: 60/70
6a2e587
vi., 16 de may. de 2025 20:03:14: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
49d33f8
vi., 16 de may. de 2025 20:03:44: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
7c50c2b
